[gd_scene load_steps=4 format=3 uid="uid://ctvvtjcw4bss1"]

[ext_resource type="Script" path="res://scenesFolder/cameraSwap.gd" id="1_q7s3c"]
[ext_resource type="Texture2D" uid="uid://cl704pedngaf5" path="res://assets/mapPhotoshopFile.png" id="1_vre4q"]
[ext_resource type="Texture2D" uid="uid://bibmv3b1o4wrb" path="res://assets/laptopScreen.webp" id="2_0nrx2"]

[node name="cameraInterface" type="Node2D"]
script = ExtResource("1_q7s3c")

[node name="backgroundCOlor" type="ColorRect" parent="."]
offset_top = 12.0
offset_right = 1152.0
offset_bottom = 644.0

[node name="laptopScreen" type="Sprite2D" parent="."]
position = Vector2(572, 429)
scale = Vector2(2.535, 2.215)
texture = ExtResource("2_0nrx2")

[node name="MapPhotoshopFile" type="Sprite2D" parent="."]
position = Vector2(558, 327)
scale = Vector2(1.28639, 1.24947)
texture = ExtResource("1_vre4q")

[node name="cameraD" type="Button" parent="."]
offset_left = 90.0
offset_top = 39.0
offset_right = 188.0
offset_bottom = 122.0

[node name="cameraF" type="Button" parent="."]
offset_left = 496.0
offset_top = 440.0
offset_right = 581.0
offset_bottom = 500.0

[node name="cameraC" type="Button" parent="."]
offset_left = 533.0
offset_top = 182.0
offset_right = 655.0
offset_bottom = 388.0

[node name="cameraB" type="Button" parent="."]
offset_left = 834.0
offset_top = 143.0
offset_right = 933.0
offset_bottom = 226.0

[node name="cameraA" type="Button" parent="."]
offset_left = 949.0
offset_top = 354.0
offset_right = 1026.0
offset_bottom = 408.0

[node name="cameraG" type="Button" parent="."]
offset_left = 415.0
offset_top = 142.0
offset_right = 493.0
offset_bottom = 244.0

[node name="cameraE" type="Button" parent="."]
offset_left = 92.0
offset_top = 314.0
offset_right = 217.0
offset_bottom = 395.0

[connection signal="pressed" from="cameraD" to="." method="_on_camera_d_pressed"]
[connection signal="pressed" from="cameraF" to="." method="_on_camera_f_pressed"]
[connection signal="pressed" from="cameraC" to="." method="_on_camera_c_pressed"]
[connection signal="pressed" from="cameraB" to="." method="_on_camera_b_pressed"]
[connection signal="pressed" from="cameraA" to="." method="_on_camera_a_pressed"]
[connection signal="pressed" from="cameraG" to="." method="_on_camera_g_pressed"]
[connection signal="pressed" from="cameraE" to="." method="_on_camera_e_pressed"]
